test/integration/gateway-tls/manifests/tls/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
    hostname: "*.haproxy"
  - name: https
    protocol: HTTPS
    port: 8443
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: offload
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
